bugfix and fixed wrapping

--- a/AdjunctFacultyManagement/static/scss/components/_custom.scss
+++ b/AdjunctFacultyManagement/static/scss/components/_custom.scss
@@ -90,8 +90,9 @@ main {
 }
 .search-form-row {
   display: flex;
-  justify-content:space-between;
+  justify-content:center;
   align-items:center;
+  flex-wrap: wrap;
 }
 
 .search-form-row-2 {
